exports[`test A very basic test of a TextEdit with an initial value and width 1`] = `
<div
  className="">
  <input
    className="form-control input-sm"
    defaultValue="Bob"
    disabled={undefined}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder={undefined}
    required={true}
    style={
      Object {
        "width": 300,
      }
    }
    type="text" />
  <div
    className="help-block">
    
  </div>
</div>
`;

exports[`test TextEdit isRequired snapshot test 1`] = `
<div
  className="">
  <input
    className="form-control input-sm"
    defaultValue="bob"
    onBlur={[Function]}
    onFocus={[Function]}
    required={true}
    style={
      Object {
        "width": "100%",
      }
    }
    type="text" />
  <div
    className="help-block" />
</div>
`;

exports[`test TextEdit isRequired snapshot test 2`] = `
<div
  className="has-error">
  <input
    className="form-control input-sm"
    defaultValue=""
    onBlur={[Function]}
    onFocus={[Function]}
    required={true}
    style={
      Object {
        "width": "100%",
      }
    }
    type="text" />
  <div
    className="help-block" />
</div>
`;
